# ChangeLog for app-arch/dpkg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.232 2013/07/29 00:30:04 jer Exp $

*dpkg-1.17.1 (29 Jul 2013)

  29 Jul 2013; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.1.ebuild:
  Version bump.

*dpkg-1.17.0 (27 Jul 2013)

  27 Jul 2013; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.0.ebuild,
  +files/dpkg-1.17.0-gzip-rsyncable.patch, metadata.xml:
  Version bump.

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for sh, wrt bug #473840

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for s390, wrt bug #473840

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for sparc, wrt bug #473840

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for arm, wrt bug #473840

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for ia64, wrt bug #473840

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for alpha, wrt bug #473840

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for amd64, wrt bug #473840

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for x86, wrt bug #473840

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for ppc64, wrt bug #473840

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for ppc, wrt bug #473840

  23 Jun 2013; Jeroen Roovers <jer@gentoo.org> dpkg-1.16.10.ebuild:
  Stable for HPPA (bug #473840).

  23 Jun 2013; Jeroen Roovers <jer@gentoo.org> dpkg-1.16.10.ebuild:
  Respect AR. Disable silent rules.

  18 Jun 2013; Christoph Junghans <ottxor@gentoo.org> dpkg-1.16.10.ebuild:
  fix prefix build

*dpkg-1.16.10 (18 Mar 2013)

  18 Mar 2013; Jeroen Roovers <jer@gentoo.org> +dpkg-1.16.10.ebuild:
  Version bump.
