@@ -6,19 +6,17 @@ AUX dpkg-1.17.0-gzip-rsyncable.patch 291 SHA256 653215618c3713f0a03efba0d4606e6b
 DIST dpkg_1.16.10.tar.xz 3703340 SHA256 aeaacf0884039940d9463901102194f9a42eb5702157b9e7a23f43e0d9f65cf2 SHA512 cd7b1159c2071f48f2e369e03b8a3d1f00366bcdabab2ef4c33700e8f3230db5c9991e5937331f7f66f616d2bb798efec12e572af5724e1c9809beb9d5ae627e WHIRLPOOL 5d54eedf2b90f35ea9ee7b5c1bdc6ddc2a3054c893cddb048598d85a6f6a5ea846879d5c1181432bffc0268b404408a6d2d40bce0cfd49784e5b6bca703bae44
 DIST dpkg_1.16.8.tar.xz 3601652 SHA256 4a1f4611390d93f1f198d910d3a4e4913b3cf81702b31f585a1872ca98df0eaa SHA512 d16b8bffbadc483353522f5dad9481aa8b10418c461bb808873845b629c092c52b130f977a6bc37661564b2651ba4006865868aa4b5051917f75c36fd1ae7b24 WHIRLPOOL 255e5f27a20f111902a76d51a7f4ac21eaad8a49c0000d548cb823b976b8f3858ba1ae961a6da85bd7eca08fa8db52376cdbcdef0a86f0779e6d8dd187b830c3
 DIST dpkg_1.16.9.tar.xz 3697752 SHA256 73cd7fba4e54acddd645346b4bc517030b9c35938e82215d3eeb8b4e7af26b7a SHA512 33bee7fc069361f81523e95fff4a90a173cd58872dd79c879d612975a8e3b979b94bad3b7d0cd8cca53885c97577ffc020462c488178718991d4993410a881b6 WHIRLPOOL 1d7b558dce1a005b833d73ff9eb84b2e6cd02ea5ddbfc40405b7121c8dfbdb8d284e4bd960fdd572c4f625ae3ef857c615b6db905ebc20267e30454a62dd29cc
-DIST dpkg_1.17.0.tar.xz 3783600 SHA256 a424cae7e94c98c3f700dc40eea6bc66ab7a14183c7d6efd2992de8261701352 SHA512 74ac89df6577503b39c83c899514b4a4755b2c158bcf567b3b0632b627927bc3fb07d0a1d946600640e9c2b64a7010c6da84318dc16d7a43abd46e36743ecfb8 WHIRLPOOL fab86c3b18404c569c1fe877d439f03213ae44abc273c5a5c8c0167482a1a1a98e5c0a1aa385728b642778d1b16319b9616d63d48d4d294df4a16d54e2c005c4
 DIST dpkg_1.17.1.tar.xz 3785620 SHA256 8912ea77bc9c14297c0a340f5f461fbd212582ce814e1805d1d0436ca885e3a1 SHA512 e5710f21c4118e43d0240587be13f4a6c5e17b442c332c4b79ae032841e7db1ae043b5eec15e8bd3653dd93632e9ba1753f5bb53d26e2a6ded99a0d56d0cfeeb WHIRLPOOL ef6724328f4cb5c4b29514f165895fb25a089cf42f02a441e012e7e2e202bf6342fde502e52365af6186b805857b2129a0b7e430e7d0fd55ff1f05e3130148bb
 EBUILD dpkg-1.16.10.ebuild 2663 SHA256 e0c488a4936a80f95ac54ec0562ee96610a0ca04646abce26a480f20cb27af38 SHA512 938a4151a8d58aef6f4a30f99ec3d3dbe727bd2f314f8293f50345a11744a153b81c3c0fe716ef5939db39c12648454c9ccdc1392e3c7b49262661e742227c3e WHIRLPOOL e6367e670065d0edf56fd1263ac6906e3c277d7e9af88e856a397f8eef79437e36d3a6d543129108c26b1c13956b9a4f53f51e0a2244db38c6686f2220e00ed0
 EBUILD dpkg-1.16.8.ebuild 2591 SHA256 e85af2c4e8b28cfa5709afcb52661b3662cdfc774cff3c4e607bae94d1761b46 SHA512 93fcbec7926020f3951a2a13a9f3ba73ed9acd3a618bc2998bcdc823571a9576cefa81cc0a64445e644c610ccaa0ea0bfac150ec90ff949d260f92163e834bc3 WHIRLPOOL 16c359e98a89f5cb1bc1fdfc0d86e885f75baf50492463d906726d83bb764a0b824d832312ad4818d73c47fc8ba23b7ed8a39af8fff6bf6340f83c2009ac2bbc
 EBUILD dpkg-1.16.9.ebuild 2582 SHA256 7b932d0e79a8373d95eb42878643d229380c5867ae0980373949ed9d1f6d2bfe SHA512 e0fedd30d6ce76f9e16b287b5e5a76a80e8d84aff20d637a935a61e261c0aa4fc2820e1e6be1e0f4986a0753914e17f6fc650e8dbdbd396afff3b3b236a066ce WHIRLPOOL 6c4fe73aacaa8087d995ffa751d3bbc3fdb932197c672e701d3e194870468839e1cdbd13512c0a6dc9ead40a640dfb6ae09728c4ff01f8207a631e78e2c2624c
-EBUILD dpkg-1.17.0.ebuild 2485 SHA256 9d56d921e10f888fcae062eb07fd997c80e928a50faccb8a8a7aa32e7e5e8da7 SHA512 bc41c28f017a9fd87db11b469435ec1e80eed450412b90de1f7bfb857bd014cb2c57dda701d45218fed73c5f5faf30f619c53f26e277eebbb2b5ffbf03d6aa86 WHIRLPOOL cfd67819b1cd2a2c6f7044318f7b0d22942afa4dc67e91c3f1d7fd21445d64794e363d669f7266f114cb17f83ac65df351462de87eac1f89a564eed74d9efaba
-EBUILD dpkg-1.17.1.ebuild 2485 SHA256 69932bb4e8e235fd0f135e57440192781c788b6bb472beafb5fcb5c1975ce6ef SHA512 69b03e52a9a62e64875f550ff75476c46d7d3de4d50c91af6427a58fec680aad53ff28f9f215fdd476af7ea5472dc19b8306bc9ab956af59bce3a3106d6f4bd4 WHIRLPOOL 8e1a1192a5db12e11374ba79e2ff089f9a90fde887a6f10c01c7dd0150f9d432c93244f63edd5ee641e5a8087fb5641f893016516873ab30dc4d188cf95242c8
-MISC ChangeLog 30402 SHA256 daef062dfe6cac92792a10d577faa594c332bd4527a59665983598dcf58069c6 SHA512 7eae74586e92977971d79424a1e41fd799ccdebed1b62bb218c81e44e423340a701ef38e44f9b6e4b6c822e37319dd80323b7fb3c3a5f4f9e9284f4bed282e07 WHIRLPOOL aad09615c01eaee96c72d9729c31dcbe783d47b1efb996c87a139f7f69475d9a20f7092e6e820171169a92b6e19a7e4d425115286cec8259af8b539d5cc99cbf
+EBUILD dpkg-1.17.1.ebuild 2494 SHA256 7ed3241b0f7319e8d349088d60f8836fb064f4721acc86a966f741a4b2bcdb17 SHA512 0af4d382134e8134acb7f5b9716c071bf1b62952615b47dd5b670d2a8b01650a1227bd4de8467d401545001c13894101637011ee395d160ff99a893c4f4966c2 WHIRLPOOL 71bd2a803e9338f9501db7ce899fd21fd1ba7f3365c9b8fcaae2403e92751efc9f81ad530eaacc8bf6223d1eaa91ac2b612e4516a660eb4bbb27c69554eb83cc
+MISC ChangeLog 30553 SHA256 de40878d957604fb7f0cf2020656dd2bf4a704bccee63ae211722ed4af4220fb SHA512 372a11d7785caf4e299825eb7e1246236da7623a10c587891b81042c685003dba7f3fcf104075951ba22e44e847d8d153bffe46e478ea5e605518b96747998d4 WHIRLPOOL 935a33f7ca11ed32b0dec12af186e8c791eb2eb1463ba3039cf16f3e5faaab613b6e916c7feeedf816d156deec972fdf6206008d588c8b22301fef6125492f60
 MISC metadata.xml 317 SHA256 f48084abf12897b2bfb8c8deed589e6345a0d3a15920fdeb88ed1cb93075d65c SHA512 d9331f4e18aba133de8bea164c2e9d9595985bc5d700a16d43d95b178477059e4f509bb4ce94443892332f86e6f939b2a0609c2debc2597cb2f45b21931cbcb1 WHIRLPOOL 1fe30c423435f91c30831d7f766ebd86644c98de32ac7296d5459c0090b7c71af4d7d25efafef6c0d65a6b824311f0e1b004db50487ff27a4d9359e0426a2ee4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlH1t44ACgkQVWmRsqeSphN8vACdE3K/dxhQph/y8T4lQRyu2drK
-/RwAnR3+GeknhsLsSbxP6tmu/ANWJNN9
-=4aM9
+iEYEAREIAAYFAlIHrX0ACgkQVWmRsqeSphMisgCfZS6wjwXXNLTquQOPXGlooun5
+FO0An1J7QUkn1r4c9J9V00EBUOMzrvlG
+=PmPZ
 -----END PGP SIGNATURE-----
