@@ -14,26 +14,18 @@ DIST nss-3.14.1-add_spi+cacerts_ca_certs.patch 25018 SHA256 82ca25982828fd7153ad
 DIST nss-3.14.3.tar.gz 6189790 SHA256 d9d366be94d33395597ebf82363fcdedfa693a6d627cf7f6bec025f609d54cc0 SHA512 4e8d8517ffb6d03da274afe9a7c50e2f0a15ffdd83e63f29a445e7aee829a8b7e2fbc772695322bd6acee81c052811735b542978044996156cb52dd7e4c001ec WHIRLPOOL 1c1c341303c8c1a13a10b732ac27d5ac8f3245b220436848bdf3877fb1487dba71654908f58810d49869e5af2a86842c4638415b283114bae0f4fbfaee3c4b29
 DIST nss-3.15-pem-support-20130617.patch.xz 27800 SHA256 01885877f12b0460798760617c9b0a1f8ed05ad0130e924211bd73fc344535cc SHA512 ebf0633e1683b3b9efe340d1117e02f1ced7e8381c7e867fff77efc3c41df1a32f017b18816ae6a04b35b5006c83e557c47a13ae576f50a84f9770c321dfa34b WHIRLPOOL 88f5edc621ca7862dc2e433836e11caa60752dc8f95bc7f49bcf07cdd0b3d8f2d7642ee02b018b8429a3e358e252ecdf3de40a1b12fab1f0fa13ca360e02a53c
 DIST nss-3.15.1.tar.gz 6286561 SHA256 f994106a33d1f3210f4151bbb3419a1c28fd1cb545caa7dc9afdebd6da626284 SHA512 173bd80771c9a64307750733a6aa2f716e61d4b060cc61d11ec741b0b214a33b188d3e23924c062f28587785077902266f3d30e60d2c141dc54d2679736f88ec WHIRLPOOL cc5d797d1b8a1d0ad2ce4c01bede5b3c81c9607a647b9be77136d96a76caa04d163db745868fe51f7fde44d5184edb5968c9175c546e31d7c3c3c0c41d6774be
-DIST nss-3.15.tar.gz 6276213 SHA256 c139f331ddcff4d5485590ee1b4489d3731aa520d4f5d942e2e40bba1e23a3cd SHA512 a703bb6fb466bfdde84f112eabe44f2db0b938b9e34ff32143ad913cd7a8891748579eca8cdd10b2a6e5eaa062a0522af8f767ec4de706178efd172d3c5875a9 WHIRLPOOL 80e76f6e36b814f7338d695220250aa68bd5757a5f3294609d3812708c30f2a77c9bdfcd6eeace34473afe22e0b0bd75eb848c168ea4e3a6327203dd323b66bf
 EBUILD nss-3.14.3.ebuild 8182 SHA256 07fd9b1be24b86907d60f4728971f2bf709a4de1bd4aa684b725f5c11122431c SHA512 9640c3483abe8cfd3001fa3f27987ff204b7b9b5129460669ce4393e5bbab1647bb1d2f60c36c4b2455efe21ad3505a927f47a665d80b35293da6beee99764d3 WHIRLPOOL 4ee6382780a9fd521c9afaaa903b92044694ecf93623d40b40ad1e5e87cb9948af8ad45e119e5ae0e3301c03d014aef4923bce955c12898689b44b2e9e03adb3
-EBUILD nss-3.15.1.ebuild 7804 SHA256 85b32a9ada5824cd8cbd6ec1f637b9dce4e317f1fc2aee4a4fd5a7538ee94a10 SHA512 9ac17ba301ac215f27905558522b1f33a8e8c38cc3175ae7d17f2e59a0c5ff78fc697d6868cf4d204c6e952e2a4d666992cfa63d27074893673577f9bb154934 WHIRLPOOL 2a860441794a8d46eec38682553c034ec4c843e3c214435bb63b0faa99df5a555eaf31d40af1f1301e2d3d6af8978508e0702f993b3645aed54c870b418b7ef5
-EBUILD nss-3.15.ebuild 7797 SHA256 046c3c70db64e46d7248a2dd716e4fa7e3540a29eeb878d831bc373dc45f50a1 SHA512 0c5d210d33d9243812ac72e2fd75dfd341bfd2d99d187915fc105136480981a2a59b828262f38477f35ff7c2e8d2a9051d9a233294b22e05aca7f5b844eae6c3 WHIRLPOOL bb14467d02aa9958a75b18b41a33703ed6c9837d55266f174172f20316af9b4559b5fbff29d7c1d4b2770357db10d8cfa1f29161e4d5f6038602edbe8d2c9031
-MISC ChangeLog 38758 SHA256 cd8bc4e84aa689712e7ff688f83dad4531bfbffadaa639a910216bc15439e954 SHA512 95911aa2d589a047ccb85d387571a1de3e26065fd9764a3ca5008f4b3c7454faff944c5f9b11378777234a231e3186f6f8a5f545981bb37423137648ce990f48 WHIRLPOOL 0e93403f39f3d95abff8d54a43a287abdaa12a6b2a33e3a9ce6c2df4b62d0d28333bc28605e99eaae4171216c3c1d66e3abec43989c29ec7a92b795e43a60b22
+EBUILD nss-3.15.1-r1.ebuild 7807 SHA256 261043f1941d24f5805d21ec8a612cc3fd8365df03d41507a256e9b2214f6810 SHA512 b36a9c3f683912b4a3efa620848ff1beeaae6d12f08532c8a72a5d78f4d2acc0c0756130ef6da05447cb9e7eb58bdeee5d7e5028af2e71f2cd62b27e72908707 WHIRLPOOL 177485164b1b03f0a06dffd8213a0d386a5c39e7ebec06baca64d9dca358de8ce4dcc674e466219414f34079616e676f1ebf19adfb692cfc2cde6768498b1d4c
+MISC ChangeLog 38924 SHA256 c0e652845f26fee65e0cbe2c0889c48e236cb6c63820dbd82d31d6a76f193c98 SHA512 2122f779311d762ebb49e81356fda2fd05d8f89697763d67b768fdd7e7bcd88c4d1b9a874935e15d5630db1b21bfdca8b19b0ceb3ed121462dfeb70e5b06454e WHIRLPOOL a89e65c6279384d4ac17d6e26bb343ba74de7cfbb5be4f478809d3e29622b7ebb878ff95fb646d208294be899697d4f62be10ecc652a49b13b6749e47778917a
 MISC metadata.xml 323 SHA256 e6fef8af50b09ae8cd84d42ca66b3716d47046ca2c643cb842a0cbc75196c1c5 SHA512 d4631c5de361b5b04d5ec36061fcb4762d47efd93b977c63e26d921109d0b2c2639f803442600b363c91937f2e5b2acd7ef0dde8b85abf801d814f8f70c20dfb WHIRLPOOL 38c7d7ccfbaf04fa026fe377b5810c187cf4da4c9c9f77ee0f80fc0d68bffd398a65eb37ec3457a351ec80405d0bd71ae09612efc6cff16e047ba01ec87ccac5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR720FAAoJEPiazRVxLXTFrtwP/3ajKVeVtRl1kQegnrBi+vMY
-TJOAutEn5UZOz0NcyIpXljy22pNq/bP9rzg/8mZbHwVyORa+K4xSvKX0UhmUP+G3
-zrwuTkmJquLJdB0GvkmKondP2rqJ6ztLe6GxiXHHyLmvJN5uy2WQ8TXw764x6ShK
-kDQGYx1kEr/bIBAk97Zzyi6FI0lI+x0Jc7ikhxh3WsQ1X3B0yj4EryxgTmscII1x
-XHdKJf2m8Pzy2JfvdqR9c/UIZVpBlW2DTIKoOnN63H7zFkBXJognLvD1H8lcY7MF
-FEG5Eu09Hm0l10JzG0f5JA3j+ZUWOFDEJwBc1EyK9Lh+u4EGunOo0eJVPjBVmI+4
-ogDKuwSj99KLihHNrqRuhf1f9muBknsDTM+ML45kHzKYZSi0CuVlmTHYv0dqlO0l
-EqrAqNSlC5u/A3WmswJGdHBsJMn90Ej1C9rWJXk8zJhPMeMTZivYMPl6fkSTCn+h
-Vl+SwItJ+B2n3MdbySfyaPGOSWtE6AgxDmmu1VAerk3h7iShhDvQ7qc1LjnTAUI5
-EFDCbmN4KZdyQgLXfFskLyS15dEIMF19+G+zShSXgQhcwy33mqjWUY4cr0d7D+JL
-NCMji3w/4plpUnew0GIihtqcQKRHJmttYBrI1zUkJBOfBkhq6vfcHvk2b5dTnBVx
-BHfCMMOzhkdVXTlkY4RY
-=3ZVW
+iQEcBAEBCAAGBQJSCATQAAoJEKDMw7q00Ii04OAH/itgSZxdrVDCPSsO5MBoos4m
++7sLov2exUgjJB6t6xZqA7lrVrm7hSFzTKHkd5FYeqsLV+gRekZoftCIsluNL5x8
+Jw4Zacz3XM1gLSkToD1tQcsGGjv0YWDjAfMmAFpWJu5NNLwNWNX2/N/iLuoEF1vJ
+JZPNFcWLOQVD3BbsrUKprH4l5DPXwwVP6Z263iliv7wBEm7AQq4gtDpAuIypfqT2
+zvpkDmkzf6J0yPjax+EERmn6seQk6u+gY6q9h3fFD9TX3pd5sfcHpa1GwcSBW90m
+ZuDzuWTCn08Q+qT9jGefq35c2OgrDaas3LdG9j09BOHYY/a5c3QLcY3+vw2QluA=
+=M18b
 -----END PGP SIGNATURE-----
