@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/nss
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.303 2013/07/24 05:58:28 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.304 2013/08/11 21:40:39 anarchy Exp $
+
+*nss-3.15.1-r1 (11 Aug 2013)
+
+  11 Aug 2013;  <anarchy@gentoo.org> +nss-3.15.1-r1.ebuild, -nss-3.15.1.ebuild,
+  -nss-3.15.ebuild:
+  Fix hardcoded lib64 path, bug #476574
 
 *nss-3.15.1 (24 Jul 2013)
 
