@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/dpkg
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.232 2013/07/29 00:30:04 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.233 2013/08/11 15:27:55 jer Exp $
+
+  11 Aug 2013; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.0.ebuild,
+  dpkg-1.17.1.ebuild:
+  Set minimum gettext version by Peter Stuge (bug #480632).
 
 *dpkg-1.17.1 (29 Jul 2013)
 
